# microservices-factorial

./: README.md  network-policies.sh
crystal/: Dockerfile  app  app.cr  manifest.yml
dotnet_core/: Program.fs  buildpack.yml  dotnet_core.fsproj  manifest.yml
dotnet_core/Properties/: launchSettings.json
go/: .gitignore  main.go  manifest.yml
gui/: manifest.yml
haskell/: .dockerignore  Dockerfile  Main.hs  Makefile  manifest.yml  microservice-factorial.cabal
java/: manifest.yml
nodejs/: index.js  manifest.yml  package-lock.json  package.json
php/: index.php  manifest.yml
python/: app.py  manifest.yml
ruby/: app.rb  manifest.yml
staticfile/: manifest.yml
